Fixed some layout issues

--- a/components/common/footer_section/footer_section_styles.module.scss
+++ b/components/common/footer_section/footer_section_styles.module.scss
@@ -3,11 +3,10 @@
 
 .footer {
     .locations_area {
-        margin-top: 128px;
         padding: 32px;
+        padding-top: 128px;
         
         @include within_breakpoint($extra_small_breakpoint) {
-            margin-top: 64px;
             padding: 16px;
         }
 
