--- a/components/common/footer_section/location_details/location_details_styles.module.scss
+++ b/components/common/footer_section/location_details/location_details_styles.module.scss
@@ -2,7 +2,8 @@
 @import "../../../../styles/colors.scss";
 
 .location_container {
-    display: flex;   
+    display: flex;
+    justify-content: center;
     
     @include within_breakpoint($extra_small_breakpoint) {
         // justify-content: center;
